# mini-ml

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
src/mini_ml/: __init__.py  evaluation.py  metrics.py  preprocessing.py  split.py  visualize.py
src/mini_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_evaluation.py  test_metrics.py  test_preprocessing.py  test_split.py  test_visualize.py
