[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-ml"
version = "0.1.0"
description = "A lightweight machine learning toolkit built on NumPy"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "l58243515", email = "l58243515@example.com"}
]
keywords = [
    "machine-learning",
    "preprocessing",
    "metrics",
    "evaluation",
    "numpy",
    "lightweight",
    "educational",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/l58243515/mini-ml"
Repository = "https://github.com/l58243515/mini-ml"
Issues = "https://github.com/l58243515/mini-ml/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]

[tool.coverage.run]
source = ["src/mini_ml"]

[tool.coverage.report]
show_missing = true
